# rato

./: .env  .gitignore  Cargo.toml  README.md  db.sql
rato/: Cargo.toml
rato-core/: Cargo.toml
rato-core/src/: authenticator.rs  authorizer.rs  database.rs  error_handler.rs  future.rs  lib.rs  redis.rs
rato-error/: Cargo.toml
rato-error/src/: main.rs
rato/src/: main.rs
rato/src/config/: mod.rs
rato/src/core/: constant.rs  error.rs  marco.rs  mod.rs  result.rs
rato/src/entity/: menu.rs  mod.rs  prelude.rs  role.rs  role_menu.rs  user.rs  user_role.rs
rato/src/handler/: menu_handler.rs  mod.rs  role_handler.rs  token_handler.rs  user_handler.rs
rato/src/middleware/: mod.rs
rato/src/router/: menu_router.rs  mod.rs  role_router.rs  token_router.rs  user_router.rs
rato/src/state/: mod.rs
rato/src/utils/: auth.rs  jwt.rs  mod.rs
