#[package]
#name = "rato-pro"
#version = "0.1.0"
#edition = "2021"

[workspace.package]
edition = "2021"

[workspace]
members = ["rato-pro", "rato-core", 'migration', "rato-error", "rato"]
resolver = "2"

[workspace.dependencies]
rato-core = { path = "rato-core" }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.9"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "signal", "fs", "io-util", "io-std", "bytes", "sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.2",features = ["cors", "trace", "limit"] }
tower-layer = "0.3.3"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
log = "0.4.26"
derive_builder = "0.20.2"
tracing = "0.1.41"
validator = { version = "0.20.0", features = ["validator_derive", "derive"] }
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.1"
serde_path_to_error = "0.1.17"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
rsa = { version = "0.9.8"}
rand = { version = "0.9.0",features = ["std_rng","std"] }
base64 = "0.22.1"
async-trait = "0.1.87"
redis = { version = "0.29.4", features = ["bb8", "tokio-comp"] }
sea-orm = { version = "1.1.8", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
mime = "0.3.17"
percent-encoding = "2.3.1"
urlencoding = "2.1.3"
anyhow = "1.0.98"
futures-util = "0.3.31"
