[package]
name = "rato"
version = "0.1.0"
edition.workspace = true

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
rato-core = { workspace = true, features = ["auth", "redis", "db", "error_handler"]}
axum = { workspace = true, features = ["macros", "multipart", "http1"] }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal", "fs", "io-util", "io-std", "bytes", "sync"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "limit", "compression-gzip", "decompression-gzip"] }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
derive_builder = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["validator_derive", "derive"] }
serde_urlencoded = { workspace = true }
form_urlencoded = { workspace = true }
serde_path_to_error = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
rand = { workspace = true, features = ["std_rng", "std"] }
base64 = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true, features = ["bb8", "tokio-comp"] }
sea-orm = { workspace = true, features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
mime = { workspace = true }
percent-encoding = { workspace = true }
urlencoding = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }